--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background:  url("../img/bg.jpg") top right no-repeat;
+  background:  #222 url("../img/bg.jpg") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
