--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,20 @@
 * License: https://bootstrapmade.com/license/
 */
 
+
+/*--------------------------------------------------------------
+# PreLoader
+--------------------------------------------------------------*/
+
+#preloader{
+  background: #222 url("../img/Infinity.gif") no-repeat center;
+  align-items: center;
+  background-size: 25%;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 2000000;
+}           
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -1198,3 +1212,4 @@ section .container {
 .credits a:hover {
   color: #fff;
 }
+
